--- a/kiosk.html
+++ b/kiosk.html
@@ -20,6 +20,6 @@
   <script src="kiosk.js" charset="utf-8"></script>
   </body>
     <footer>
-      Made with ❤️.
+      Made with ❤️ love.
     </footer>
   </html>
